@@ -357,15 +357,6 @@ if __name__ == '__main__':
     if conf.debug:
         debug = True
 
-    if fork:
-        try:
-            pid = os.fork()
-            if pid:
-                sys.exit(0)
-        except OSError, e:
-            print >>sys.stderr, "lastfmsubmitd: can't fork: %s" % e
-            sys.exit(1)
-
     cli = lastfm.client.Daemon(DAEMON_NAME, conf)
     cli.daemonize(fork)
     cli.open_log(debug, stderr)
